kubernetes/apps/base/istio-ingress/config/http-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: istio-ingress
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
      sectionName: http
    - name: istio-ingressgateway
      namespace: istio-ingress
      sectionName: http-root
  hostnames:
    - "*.${CLUSTER_DOMAIN}"
    - "${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
